# tribo

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  GNUmakefile  LICENSE  README.md  compile_flags.txt  makefile
.github/: codecov.yml  labeler.yml
.github/actions/: code-check.yml.backup
.github/actions/run-build/: action.yml
.github/actions/setup-environment/: action.yml
.github/checks/: commit-msg.py  pr-body.py  pr-num-commits.py  pr-title.py
.github/workflows/: assign-pr.yml  build-and-test.yml  code-check.yml  github.yml  label-pr.yml  pr-assign.yml  pr-check.yml  pr-checks.yml  pr-label.yml  premake-build.yml
.github/workflows/setup-environment/: action.yml
backend/cpp/src/: CMakeLists.txt  info.c  pch.h
bench/: CMakeLists.txt  domain.cpp  info.cpp  pch.hpp
components/main/: CMakeLists.txt
components/main/test/: CMakeLists.txt
components/main/test/performance/: CMakeLists.txt
doc/: build-instructions.md
examples/: simple.ini
include/: .clang-tidy  tribo.h
scripts/: build-all.bat  build-all.sh  build-tools.bat  build-tools.sh  ci.bat  ci.sh  cmake.bat  cmake.sh  commit-check.py
scripts/cmake/: 3p.cmake  config.cmake  options.cmake  pch.cmake  project.cmake  rules.cmake  tools.cmake
scripts/cmake/3p/: argparse.cmake  googlebenchmark.cmake  googletest.cmake
scripts/cmake/presets/: clang-18.json  clang-cl.json  clang.json  common.json  default.json  gcc-13.json  gcc.json  minimal.json  msvc.json  tools.json
scripts/cmake/project/: compiler.cmake  compilerFlags.cmake  git-hash.cmake  global.cmake  globals.cmake  pch.cmake
scripts/cmake/rules/: benchmark.cmake  clang-tidy.cmake  compile-commands.cmake  coverage.cmake  doxygen.cmake
scripts/cmake/tools/: cmake.cmake  ninja.cmake
scripts/commit-checks/: pr-body.py  pr-title.py
src/: CMakeLists.txt  domain.c  domain.h  info.c  pch.h
src/app/: app.h  main.c  version.c
src/avx/: main.c
src/avx2/: main.c  main.h
src/base/: allocate.c  init.c  main.c  main2.c  solver.h
src/cli/: cmd.c  help.c  info.c  log.c  main.c  main.h
src/cuda/: main.cu  main2.cu
src/include/: api.h  api.hpp  arch.h  isa.hpp  log.h  log.hpp  timer.h  triboArch.h  triboExport.h  triboLog.h  triboUtils.h
src/include/tribo/: arch.h  export.h  isa.h  log.h  parse.h  plugin.h  time.h  version.h
src/neon/: main.c
src/utils/: compile_flags.txt  isa.c  log.c  main.c  parse.c  plugin.c  time.c  version.c
test/: CMakeLists.txt  domain.cpp  info.cpp  main.cpp  pch.hpp
tools/: GNUmakefile  Write-NMakeDependencies.ps1  check-perf.py  clang-tidy.c  compiler-detection.mak  config.mak  detect-arch-gmake.mak  example.mak  files.mk  help.txt  makefile  unix.mak  windows.mak
tools/cmake/: config.cmake
tools/cmake/3p/: googlebenchmark.cmake  googletest.cmake  python.cmake
tools/cmake/compiler/: clang-cl.cmake  clang.cmake  gnu.cmake  msvc.cmake  selection.cmake
tools/cmake/git/: branch.cmake  commit-count.cmake  hash.cmake
tools/cmake/presets/: clang-18.json  clang-cl.json  clang-libcxx.json  clang-ver-libcxx.json  clang.json  common.json  default.json  gcc-13.json  gcc-ver.json  gcc.json  intel.json  msvc.json
tools/cmake/project/: bench-version-clone.cmake  build-config.cmake  cpack.cmake  global.cmake  test.cmake
tools/cmake/rules/: bench.cmake  compile-commands.cmake  coverage.cmake  doxygen.cmake
tools/compiler/: cc.mak  cl.mak  clang-cl.mak  clang.mak  gcc.mak  icx-cl.mak  icx.mak  nvcc.mak
tools/compilers/: cl.mak  clang-brew.mak  clang.mak  gcc.mak  icx.mak  setup-gmake.mak  setup-nmake.mak
tools/gmake/: arch.mak  clang-tidy.mak  clang.mak  compiler.mak  cuda-nmake.mak  gcc.mak  icx.mak  linker.mak  nvcc.mak  os.mak  setup.mak
tools/makefile/: Untitled-1.txt  cl.mak  clang-apple.mak  clang-brew.mak  clang-cl.mak  clang-doc-gmake.mak  clang-doc-nmake.mak  clang-tidy-gmake.mak  clang-tidy-nmake.mak  cuda-gmake.mak  cuda-nmake.mak  detect-arch-nmake.mak  gcc-brew.mak  icx-cl.mak  icx.mak  link.mak  nvcc.mak  setup-gmake.mak  setup-nmake.mak
tools/nmake/: cl.mk  clang-cl.mk  compiler.mk  icx-cl.mk  link.mk  setup.mk  tidy.mk
tools/pull-request-checks/: body.py  num-commits.py  title.py
