set(myTargetName ${TRIBO_PRJ_NAME})

add_library(
  ${myTargetName}
  SHARED
  info.c
)

# * Enable build information macros for one file only. PCH can't be used due to macro definition.
set_source_files_properties(
  info.c
  PROPERTIES
  SKIP_PRECOMPILE_HEADERS YES
  COMPILE_DEFINITIONS TRIBO_PROJECT_VERSION_MAJOR=${TRIBO_PROJECT_VERSION_MAJOR}$<SEMICOLON>TRIBO_PROJECT_VERSION_MINOR=${TRIBO_PROJECT_VERSION_MINOR}$<SEMICOLON>TRIBO_PROJECT_VERSION_PATCH=${TRIBO_PROJECT_VERSION_PATCH}
)

set_target_properties(
  ${myTargetName}
  PROPERTIES
  CXX_STANDARD 23
  CXX_EXTENSIONS OFF
  CXX_STANDARD_REQUIRED ON
  VERSION ${TRIBO_PROJECT_VERSION}
  SOVERSION ${TRIBO_PROJECT_VERSION_MAJOR}
  DEFINE_SYMBOL ${TRIBO_EXPORT_MACRO}
  PUBLIC_HEADER ${TRIBO_EXPORT_HEADER_DIR}/tribo.h
)

include(${TRIBO_CMAKE_SCRIPTS_DIR}/pch.cmake)

target_include_directories(${myTargetName} PUBLIC ${TRIBO_EXPORT_HEADER_DIR})

install(
  TARGETS ${myTargetName}
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include
)
