# * Get current folder basename to use as the output target name.
set(myTargetName "tribo")

add_library(
  ${myTargetName}
  SHARED
  info.c
  domain.c
)

set_target_properties(
  ${myTargetName}
  PROPERTIES
  C_STANDARD 17
  CXX_STANDARD 23
  CXX_EXTENSIONS OFF
  CXX_STANDARD_REQUIRED ON
  CXX_SCAN_FOR_MODULES OFF
  CXX_VISIBILITY_PRESET hidden
  C_VISIBILITY_PRESET hidden
  EXPORT_COMPILE_COMMANDS ${TRIBO_EXPORT_COMPILE_COMMANDS}
  CXX_CLANG_TIDY "${TRIBO_CLANG_TIDY}"
  C_CLANG_TIDY "${TRIBO_CLANG_TIDY}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
  INTERPROCEDURAL_OPTIMIZATION_RELEASE ON
  INTERPROCEDURAL_OPTIMIZATION_DIST ON
  LINK_OPTIONS "${TRIBO_LINKER_FLAGS}"
  VISIBILITY_INLINES_HIDDEN ON
  PUBLIC_HEADER ${TRIBO_EXPORT_HEADER_DIR}/tribo.h
  DEFINE_SYMBOL "TRIBO_EXPORT_API"
)

target_compile_definitions(
  ${myTargetName}
  PRIVATE
  TRIBO_PROJECT_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
  TRIBO_PROJECT_VERSION_MINOR=${PROJECT_VERSION_MINOR}
  TRIBO_PROJECT_VERSION_PATCH=${PROJECT_VERSION_PATCH}
  TRIBO_GIT_COMMIT_HASH=${TRIBO_GIT_COMMIT_HASH}
)

target_compile_options(
  ${myTargetName}
  PRIVATE
  $<$<COMPILE_LANGUAGE:CXX>:${TRIBO_CXX_FLAGS}>
  $<$<COMPILE_LANGUAGE:C>:${TRIBO_C_FLAGS}>
)

target_include_directories(${myTargetName} PUBLIC ${TRIBO_EXPORT_HEADER_DIR})

install(
  TARGETS ${myTargetName}
  RUNTIME DESTINATION bin
  PUBLIC_HEADER DESTINATION include
)

add_pch(${myTargetName})
