# * Get current folder basename to use as the output target name.
set(myTargetName ${PROJECT_NAME})

add_library(
  ${myTargetName}
  SHARED
  info.c
)

set_target_properties(
  ${myTargetName}
  PROPERTIES
  COMPILE_OPTIONS "${TRIBO_CXX_FLAGS}"
  COMPILE_WARNING_AS_ERROR ${TRIBO_ENABLE_WARNINGS}
  CXX_CLANG_TIDY "${TRIBO_CLANG_TIDY}"
  CXX_EXTENSIONS OFF
  CXX_SCAN_FOR_MODULES OFF
  CXX_STANDARD 23
  CXX_STANDARD_REQUIRED ON
  CXX_VISIBILITY_PRESET hidden
  DEFINE_SYMBOL "${TRIBO_EXPORT_MACRO}"
  EXPORT_COMPILE_COMMANDS ${TRIBO_EXPORT_COMPILE_COMMANDS}
  INCLUDE_DIRECTORIES "${TRIBO_EXPORT_HEADER_DIR}"
  INTERPROCEDURAL_OPTIMIZATION_RELEASE ON
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
  LINK_OPTIONS "${TRIBO_LINKER_FLAGS}"
  PUBLIC_HEADER "${TRIBO_EXPORT_HEADER}"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
  VISIBILITY_INLINES_HIDDEN ON
)

set_source_files_properties(
  info.c
  PROPERTIES

  # Skip pch because macro specially defined for this file.
  COMPILE_DEFINITIONS "${TRIBO_PROJECT_VERSION_DEFINES}"
  SKIP_PRECOMPILE_HEADERS ON
)

install(
  TARGETS ${myTargetName}
  RUNTIME DESTINATION bin
  PUBLIC_HEADER DESTINATION include
)

add_pch(${myTargetName})
